--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@fastify/cors": "^10.0.1",
-    "@fastify/sensible": "^6.0.2",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.0"
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.9",
+    "esbuild": "^0.24.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
